@@ -1,3 +1,7 @@
+2009-12-04  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el ([f6]): Bind f6 to grep-cursor.
+
 2009-12-03  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-misc.el: Add doc-mode.
